@@ -10,6 +10,7 @@ import java.io.Reader;
 import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -18,7 +19,10 @@ public class PersistenciaEmpleados {
     private static final String CAJEROS_FILE = "data/cajeros.json";
     private static final String COCINEROS_FILE = "data/cocineros.json";
     private static final String SERVICIOS_FILE = "data/servicios.json";
-    private static final Gson gson = new GsonBuilder().setPrettyPrinting().create();
+    private static final Gson gson = new GsonBuilder()
+    	    .registerTypeAdapter(java.time.LocalDate.class, new persistencia.LocalDateAdapter())
+    	    .setPrettyPrinting()
+    	    .create();
 
     public static void guardarEmpleados(AdministradorEmpleados admin) {
         try (Writer writer1 = new FileWriter(CAJEROS_FILE);
@@ -39,22 +43,22 @@ public class PersistenciaEmpleados {
         try {
             if (Files.exists(Paths.get(CAJEROS_FILE))) {
                 try (Reader reader1 = new FileReader(CAJEROS_FILE)) {
-                    List<Cajero> cajeros = Arrays.asList(gson.fromJson(reader1, Cajero[].class));
-                    admin.setCajeros(cajeros);
+                    Cajero[] cajerosArray = gson.fromJson(reader1, Cajero[].class);
+                    admin.setCajeros(new ArrayList<>(List.of(cajerosArray)));
                 }
             }
 
             if (Files.exists(Paths.get(COCINEROS_FILE))) {
                 try (Reader reader2 = new FileReader(COCINEROS_FILE)) {
-                    List<Cocinero> cocineros = Arrays.asList(gson.fromJson(reader2, Cocinero[].class));
-                    admin.setCocineros(cocineros);
+                    Cocinero[] cocinerosArray = gson.fromJson(reader2, Cocinero[].class);
+                    admin.setCocineros(new ArrayList<>(List.of(cocinerosArray)));
                 }
             }
 
             if (Files.exists(Paths.get(SERVICIOS_FILE))) {
                 try (Reader reader3 = new FileReader(SERVICIOS_FILE)) {
-                    List<ServicioGeneral> servicios = Arrays.asList(gson.fromJson(reader3, ServicioGeneral[].class));
-                    admin.setServicios(servicios);
+                    ServicioGeneral[] serviciosArray = gson.fromJson(reader3, ServicioGeneral[].class);
+                    admin.setServicios(new ArrayList<>(List.of(serviciosArray)));
                 }
             }
 
@@ -63,4 +67,5 @@ public class PersistenciaEmpleados {
             throw new RuntimeException("Error al cargar los empleados: " + e.getMessage(), e);
         }
     }
+
 }
